# uptime-cli-plugin

./: .env  .gitignore  README.md  cli.clab.yml  cli.drawio  pyproject.toml  requirements.txt  run
debug/: prepare-debug.sh
diagrams/: cli.drawio
src/: debug-cfg.txt  myversion.py  plugin_loader.py  sr_cli  uptime.py  version.py
uptime/: uptime.py  uptime_simple.py
