[project]
name = "custom-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "jinja2==3.1.2",
    "mypy==1.11.0",
    "mypy-extensions==1.0.0",
]

[tool.uv.sources]
oscrypto = { git = "https://github.com/wbond/oscrypto.git", rev = "1547f535001ba568b239b8797465536759c742a3" }

[dependency-groups]
dev = ["ruff>=0.9.5"]
